// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`MusicPlayer > matches the snapshot 1`] = `
"<div class="musicPlayer">
  <!--v-if-->
  <div class="spaceBetween centerItems inner">
    <div class="centerItems trackDetails">
      <div class="centerAll preloadImage image"><span class="imageLoader"><span class="visuallyHidden">Loading image</span></span><img class="image" src="image" alt="Image" style="display: none;"></div>
      <div>
        <p class="strong clamp mBXS">queue-track-0</p>
        <ul class="commaList smallFont clamp">
          <li data-test-id="artist-list-item"><a class="link">name</a></li>
          <li data-test-id="artist-list-item"><a class="link">name1</a></li>
        </ul>
      </div>
    </div><span class="centerItems spinningLoader spinningLoader hideDesktop"><ph-circle-notch-stub size="20" class="icon"></ph-circle-notch-stub><span class="visuallyHidden">Loading...</span></span>
    <div class="centerItems playerControls centerAll hideMobile"><button class="centerItems buttonLink" type="button" title="Switch shuffle off">
        <phshuffle class="icon" aria-hidden="true" size="24" weight="duotone" color="currentColor"></phshuffle><span class="clamp text visuallyHidden">Switch shuffle off</span>
      </button><button class="centerItems buttonLink disabled" disabled="" type="button" title="Previous track">
        <phskipback class="icon" aria-hidden="true" size="24" weight="duotone"></phskipback><span class="clamp text visuallyHidden"> Previous track </span>
      </button>
      <!--v-if--><span class="centerItems spinningLoader spinningLoader playPauseButton"><ph-circle-notch-stub size="20" class="icon"></ph-circle-notch-stub><span class="visuallyHidden">Loading...</span></span>
      <!--v-if--><button class="centerItems buttonLink disabled" disabled="" type="button" title="Next track">
        <phskipforward class="icon" aria-hidden="true" size="24" weight="duotone"></phskipforward><span class="clamp text visuallyHidden"> Next track </span>
      </button><button class="centerItems buttonLink" type="button" title="Turn on repeat all">
        <phrepeat class="icon" aria-hidden="true" size="24" weight="duotone" color="currentColor"></phrepeat><span class="clamp text visuallyHidden">Turn on repeat all</span>
      </button>
    </div>
    <div class="centerItems playerOptions hideMobile playerOptions">
      <!--v-if-->
      <div class="centerItems volumeControl"><button class="centerItems buttonLink" type="button" title="Mute">
          <phspeakerhigh class="icon" aria-hidden="true" size="24" weight="duotone"></phspeakerhigh><span class="clamp text visuallyHidden">Mute</span>
        </button>
        <div class="centerItems smallFont volumeInputWrapper">
          <div class="inputRange" aria-label="Volume" aria-valuetext="1 of 1">
            <div class="centerItems slider">
              <div class="progressWrapper">
                <div class="process" style="width: 0px;"></div>
                <!--v-if-->
              </div>
              <!--v-if-->
              <!--v-if-->
            </div>
          </div>
          <p aria-hidden="" class="currentVolume">100</p>
          <p class="visuallyHidden"> Volume at 100% </p>
        </div>
      </div>
      <!--v-if-->
      <!--v-if--><button class="centerItems buttonLink" type="button" title="Like track">
        <phheart class="icon" aria-hidden="true" size="24" weight="duotone"></phheart><span class="clamp text visuallyHidden">Like track</span>
      </button>
    </div>
  </div>
</div>"
`;

exports[`MusicPlayer > when currentTrack value contain artists > when currentTrack.artists is an empty array > matches the snapshot 1`] = `
"<div class="musicPlayer">
  <div class="inputRange hideMobile trackSeeker" aria-label="Seek" aria-valuetext="00:00 of 00:10">
    <div class="centerItems slider">
      <div class="progressWrapper">
        <div class="process" style="width: 0px;"></div>
        <div class="buffer" style="width: 0px;"></div>
      </div>
      <div class="thumb" style="left: -6px;"></div>
      <div class="mBS strong smallFont tooltip" style="left: 0px;">00:00</div>
    </div>
  </div>
  <div class="spaceBetween centerItems inner">
    <div class="centerItems trackDetails">
      <figure class="image"><a title="Go to queue-track-0">
          <div class="centerAll preloadImage"><span class="imageLoader"><span class="visuallyHidden">Loading image</span></span><img class="image" src="image" alt="queue-track-0" style="display: none;"></div>
        </a></figure>
      <div>
        <p class="strong clamp mBXS">queue-track-0</p>
        <!--v-if-->
      </div>
    </div><span class="centerItems spinningLoader spinningLoader hideDesktop"><ph-circle-notch-stub size="20" class="icon"></ph-circle-notch-stub><span class="visuallyHidden">Loading...</span></span>
    <div class="centerItems playerControls centerAll hideMobile"><button class="centerItems buttonLink" type="button" title="Switch shuffle off">
        <phshuffle class="icon" aria-hidden="true" size="24" weight="duotone" color="currentColor"></phshuffle><span class="clamp text visuallyHidden">Switch shuffle off</span>
      </button><button class="centerItems buttonLink disabled" disabled="" type="button" title="Previous track">
        <phskipback class="icon" aria-hidden="true" size="24" weight="duotone"></phskipback><span class="clamp text visuallyHidden"> Previous track </span>
      </button>
      <!--v-if--><span class="centerItems spinningLoader spinningLoader playPauseButton"><ph-circle-notch-stub size="20" class="icon"></ph-circle-notch-stub><span class="visuallyHidden">Loading...</span></span>
      <!--v-if--><button class="centerItems buttonLink disabled" disabled="" type="button" title="Next track">
        <phskipforward class="icon" aria-hidden="true" size="24" weight="duotone"></phskipforward><span class="clamp text visuallyHidden"> Next track </span>
      </button><button class="centerItems buttonLink" type="button" title="Turn on repeat all">
        <phrepeat class="icon" aria-hidden="true" size="24" weight="duotone" color="currentColor"></phrepeat><span class="clamp text visuallyHidden">Turn on repeat all</span>
      </button>
    </div>
    <div class="centerItems playerOptions hideMobile playerOptions">
      <p class="smallFont time">00:00 / 00:10</p>
      <div class="centerItems volumeControl"><button class="centerItems buttonLink" type="button" title="Mute">
          <phspeakerhigh class="icon" aria-hidden="true" size="24" weight="duotone"></phspeakerhigh><span class="clamp text visuallyHidden">Mute</span>
        </button>
        <div class="centerItems smallFont volumeInputWrapper">
          <div class="inputRange" aria-label="Volume" aria-valuetext="1 of 1">
            <div class="centerItems slider">
              <div class="progressWrapper">
                <div class="process" style="width: 0px;"></div>
                <!--v-if-->
              </div>
              <!--v-if-->
              <!--v-if-->
            </div>
          </div>
          <p aria-hidden="" class="currentVolume">100</p>
          <p class="visuallyHidden"> Volume at 100% </p>
        </div>
      </div>
      <!--v-if--><button class="centerItems buttonLink" type="button" title="Media information">
        <phinfo class="icon" aria-hidden="true" size="24" weight="duotone"></phinfo><span class="clamp text visuallyHidden"> Media information </span>
      </button><button class="centerItems buttonLink" type="button" title="Like track">
        <phheart class="icon" aria-hidden="true" size="24" weight="duotone"></phheart><span class="clamp text visuallyHidden">Like track</span>
      </button>
    </div>
  </div>
</div>"
`;

exports[`MusicPlayer > when currentTrack value does not contain artists > matches the snapshot 1`] = `
"<div class="musicPlayer">
  <div class="inputRange hideMobile trackSeeker" aria-label="Seek" aria-valuetext="00:00 of 00:10">
    <div class="centerItems slider">
      <div class="progressWrapper">
        <div class="process" style="width: 0px;"></div>
        <div class="buffer" style="width: 0px;"></div>
      </div>
      <div class="thumb" style="left: -6px;"></div>
      <div class="mBS strong smallFont tooltip" style="left: 0px;">00:00</div>
    </div>
  </div>
  <div class="spaceBetween centerItems inner">
    <div class="centerItems trackDetails">
      <figure class="image"><a title="Go to queue-track-0">
          <div class="centerAll preloadImage"><span class="imageLoader"><span class="visuallyHidden">Loading image</span></span><img class="image" src="image" alt="queue-track-0" style="display: none;"></div>
        </a></figure>
      <div>
        <p class="strong clamp mBXS">queue-track-0</p>
        <!--v-if-->
      </div>
    </div><span class="centerItems spinningLoader spinningLoader hideDesktop"><ph-circle-notch-stub size="20" class="icon"></ph-circle-notch-stub><span class="visuallyHidden">Loading...</span></span>
    <div class="centerItems playerControls centerAll hideMobile"><button class="centerItems buttonLink" type="button" title="Switch shuffle off">
        <phshuffle class="icon" aria-hidden="true" size="24" weight="duotone" color="currentColor"></phshuffle><span class="clamp text visuallyHidden">Switch shuffle off</span>
      </button><button class="centerItems buttonLink disabled" disabled="" type="button" title="Previous track">
        <phskipback class="icon" aria-hidden="true" size="24" weight="duotone"></phskipback><span class="clamp text visuallyHidden"> Previous track </span>
      </button>
      <!--v-if--><span class="centerItems spinningLoader spinningLoader playPauseButton"><ph-circle-notch-stub size="20" class="icon"></ph-circle-notch-stub><span class="visuallyHidden">Loading...</span></span>
      <!--v-if--><button class="centerItems buttonLink disabled" disabled="" type="button" title="Next track">
        <phskipforward class="icon" aria-hidden="true" size="24" weight="duotone"></phskipforward><span class="clamp text visuallyHidden"> Next track </span>
      </button><button class="centerItems buttonLink" type="button" title="Turn on repeat all">
        <phrepeat class="icon" aria-hidden="true" size="24" weight="duotone" color="currentColor"></phrepeat><span class="clamp text visuallyHidden">Turn on repeat all</span>
      </button>
    </div>
    <div class="centerItems playerOptions hideMobile playerOptions">
      <p class="smallFont time">00:00 / 00:10</p>
      <div class="centerItems volumeControl"><button class="centerItems buttonLink" type="button" title="Mute">
          <phspeakerhigh class="icon" aria-hidden="true" size="24" weight="duotone"></phspeakerhigh><span class="clamp text visuallyHidden">Mute</span>
        </button>
        <div class="centerItems smallFont volumeInputWrapper">
          <div class="inputRange" aria-label="Volume" aria-valuetext="1 of 1">
            <div class="centerItems slider">
              <div class="progressWrapper">
                <div class="process" style="width: 0px;"></div>
                <!--v-if-->
              </div>
              <!--v-if-->
              <!--v-if-->
            </div>
          </div>
          <p aria-hidden="" class="currentVolume">100</p>
          <p class="visuallyHidden"> Volume at 100% </p>
        </div>
      </div>
      <!--v-if--><button class="centerItems buttonLink" type="button" title="Media information">
        <phinfo class="icon" aria-hidden="true" size="24" weight="duotone"></phinfo><span class="clamp text visuallyHidden"> Media information </span>
      </button><button class="centerItems buttonLink" type="button" title="Like track">
        <phheart class="icon" aria-hidden="true" size="24" weight="duotone"></phheart><span class="clamp text visuallyHidden">Like track</span>
      </button>
    </div>
  </div>
</div>"
`;

exports[`MusicPlayer > when isRadioStation value is false > when duration value is greater than 0 > matches the snapshot 1`] = `
"<div class="musicPlayer">
  <div class="inputRange hideMobile trackSeeker" aria-label="Seek" aria-valuetext="00:00 of 00:10">
    <div class="centerItems slider">
      <div class="progressWrapper">
        <div class="process" style="width: 0px;"></div>
        <div class="buffer" style="width: 0px;"></div>
      </div>
      <div class="thumb" style="left: -6px;"></div>
      <div class="mBS strong smallFont tooltip" style="left: 0px;">00:00</div>
    </div>
  </div>
  <div class="spaceBetween centerItems inner">
    <div class="centerItems trackDetails">
      <div class="centerAll preloadImage image"><span class="imageLoader"><span class="visuallyHidden">Loading image</span></span><img class="image" src="image" alt="Image" style="display: none;"></div>
      <div>
        <p class="strong clamp mBXS">queue-track-0</p>
        <ul class="commaList smallFont clamp">
          <li data-test-id="artist-list-item"><a class="link">name</a></li>
          <li data-test-id="artist-list-item"><a class="link">name1</a></li>
        </ul>
      </div>
    </div><span class="centerItems spinningLoader spinningLoader hideDesktop"><ph-circle-notch-stub size="20" class="icon"></ph-circle-notch-stub><span class="visuallyHidden">Loading...</span></span>
    <div class="centerItems playerControls centerAll hideMobile"><button class="centerItems buttonLink" type="button" title="Switch shuffle off">
        <phshuffle class="icon" aria-hidden="true" size="24" weight="duotone" color="currentColor"></phshuffle><span class="clamp text visuallyHidden">Switch shuffle off</span>
      </button><button class="centerItems buttonLink disabled" disabled="" type="button" title="Previous track">
        <phskipback class="icon" aria-hidden="true" size="24" weight="duotone"></phskipback><span class="clamp text visuallyHidden"> Previous track </span>
      </button>
      <!--v-if--><span class="centerItems spinningLoader spinningLoader playPauseButton"><ph-circle-notch-stub size="20" class="icon"></ph-circle-notch-stub><span class="visuallyHidden">Loading...</span></span>
      <!--v-if--><button class="centerItems buttonLink disabled" disabled="" type="button" title="Next track">
        <phskipforward class="icon" aria-hidden="true" size="24" weight="duotone"></phskipforward><span class="clamp text visuallyHidden"> Next track </span>
      </button><button class="centerItems buttonLink" type="button" title="Turn on repeat all">
        <phrepeat class="icon" aria-hidden="true" size="24" weight="duotone" color="currentColor"></phrepeat><span class="clamp text visuallyHidden">Turn on repeat all</span>
      </button>
    </div>
    <div class="centerItems playerOptions hideMobile playerOptions">
      <p class="smallFont time">00:00 / 00:10</p>
      <div class="centerItems volumeControl"><button class="centerItems buttonLink" type="button" title="Mute">
          <phspeakerhigh class="icon" aria-hidden="true" size="24" weight="duotone"></phspeakerhigh><span class="clamp text visuallyHidden">Mute</span>
        </button>
        <div class="centerItems smallFont volumeInputWrapper">
          <div class="inputRange" aria-label="Volume" aria-valuetext="1 of 1">
            <div class="centerItems slider">
              <div class="progressWrapper">
                <div class="process" style="width: 0px;"></div>
                <!--v-if-->
              </div>
              <!--v-if-->
              <!--v-if-->
            </div>
          </div>
          <p aria-hidden="" class="currentVolume">100</p>
          <p class="visuallyHidden"> Volume at 100% </p>
        </div>
      </div>
      <!--v-if-->
      <!--v-if--><button class="centerItems buttonLink" type="button" title="Like track">
        <phheart class="icon" aria-hidden="true" size="24" weight="duotone"></phheart><span class="clamp text visuallyHidden">Like track</span>
      </button>
    </div>
  </div>
</div>"
`;

exports[`MusicPlayer > when isTrack value is true > when currentTrack value contain albumId > when currentTrack.albumId is undefined > matches the snapshot 1`] = `
"<div class="musicPlayer">
  <div class="inputRange hideMobile trackSeeker" aria-label="Seek" aria-valuetext="00:00 of 00:10">
    <div class="centerItems slider">
      <div class="progressWrapper">
        <div class="process" style="width: 0px;"></div>
        <div class="buffer" style="width: 0px;"></div>
      </div>
      <div class="thumb" style="left: -6px;"></div>
      <div class="mBS strong smallFont tooltip" style="left: 0px;">00:00</div>
    </div>
  </div>
  <div class="spaceBetween centerItems inner">
    <div class="centerItems trackDetails">
      <div class="centerAll preloadImage image"><span class="imageLoader"><span class="visuallyHidden">Loading image</span></span><img class="image" src="image" alt="Image" style="display: none;"></div>
      <div>
        <p class="strong clamp mBXS">queue-track-0</p>
        <ul class="commaList smallFont clamp">
          <li data-test-id="artist-list-item"><a class="link">name</a></li>
          <li data-test-id="artist-list-item"><a class="link">name1</a></li>
        </ul>
      </div>
    </div><span class="centerItems spinningLoader spinningLoader hideDesktop"><ph-circle-notch-stub size="20" class="icon"></ph-circle-notch-stub><span class="visuallyHidden">Loading...</span></span>
    <div class="centerItems playerControls centerAll hideMobile"><button class="centerItems buttonLink" type="button" title="Switch shuffle off">
        <phshuffle class="icon" aria-hidden="true" size="24" weight="duotone" color="currentColor"></phshuffle><span class="clamp text visuallyHidden">Switch shuffle off</span>
      </button><button class="centerItems buttonLink disabled" disabled="" type="button" title="Previous track">
        <phskipback class="icon" aria-hidden="true" size="24" weight="duotone"></phskipback><span class="clamp text visuallyHidden"> Previous track </span>
      </button>
      <!--v-if--><span class="centerItems spinningLoader spinningLoader playPauseButton"><ph-circle-notch-stub size="20" class="icon"></ph-circle-notch-stub><span class="visuallyHidden">Loading...</span></span>
      <!--v-if--><button class="centerItems buttonLink disabled" disabled="" type="button" title="Next track">
        <phskipforward class="icon" aria-hidden="true" size="24" weight="duotone"></phskipforward><span class="clamp text visuallyHidden"> Next track </span>
      </button><button class="centerItems buttonLink" type="button" title="Turn on repeat all">
        <phrepeat class="icon" aria-hidden="true" size="24" weight="duotone" color="currentColor"></phrepeat><span class="clamp text visuallyHidden">Turn on repeat all</span>
      </button>
    </div>
    <div class="centerItems playerOptions hideMobile playerOptions">
      <p class="smallFont time">00:00 / 00:10</p>
      <div class="centerItems volumeControl"><button class="centerItems buttonLink" type="button" title="Mute">
          <phspeakerhigh class="icon" aria-hidden="true" size="24" weight="duotone"></phspeakerhigh><span class="clamp text visuallyHidden">Mute</span>
        </button>
        <div class="centerItems smallFont volumeInputWrapper">
          <div class="inputRange" aria-label="Volume" aria-valuetext="1 of 1">
            <div class="centerItems slider">
              <div class="progressWrapper">
                <div class="process" style="width: 0px;"></div>
                <!--v-if-->
              </div>
              <!--v-if-->
              <!--v-if-->
            </div>
          </div>
          <p aria-hidden="" class="currentVolume">100</p>
          <p class="visuallyHidden"> Volume at 100% </p>
        </div>
      </div>
      <!--v-if--><button class="centerItems buttonLink" type="button" title="Media information">
        <phinfo class="icon" aria-hidden="true" size="24" weight="duotone"></phinfo><span class="clamp text visuallyHidden"> Media information </span>
      </button><button class="centerItems buttonLink" type="button" title="Like track">
        <phheart class="icon" aria-hidden="true" size="24" weight="duotone"></phheart><span class="clamp text visuallyHidden">Like track</span>
      </button>
    </div>
  </div>
</div>"
`;

exports[`MusicPlayer > when isTrack value is true > when currentTrack value does not contain albumId > matches the snapshot 1`] = `
"<div class="musicPlayer">
  <div class="inputRange hideMobile trackSeeker" aria-label="Seek" aria-valuetext="00:00 of 00:10">
    <div class="centerItems slider">
      <div class="progressWrapper">
        <div class="process" style="width: 0px;"></div>
        <div class="buffer" style="width: 0px;"></div>
      </div>
      <div class="thumb" style="left: -6px;"></div>
      <div class="mBS strong smallFont tooltip" style="left: 0px;">00:00</div>
    </div>
  </div>
  <div class="spaceBetween centerItems inner">
    <div class="centerItems trackDetails">
      <div class="centerAll preloadImage image"><span class="imageLoader"><span class="visuallyHidden">Loading image</span></span><img class="image" src="image" alt="Image" style="display: none;"></div>
      <div>
        <p class="strong clamp mBXS">queue-track-0</p>
        <ul class="commaList smallFont clamp">
          <li data-test-id="artist-list-item"><a class="link">name</a></li>
          <li data-test-id="artist-list-item"><a class="link">name1</a></li>
        </ul>
      </div>
    </div><span class="centerItems spinningLoader spinningLoader hideDesktop"><ph-circle-notch-stub size="20" class="icon"></ph-circle-notch-stub><span class="visuallyHidden">Loading...</span></span>
    <div class="centerItems playerControls centerAll hideMobile"><button class="centerItems buttonLink" type="button" title="Switch shuffle off">
        <phshuffle class="icon" aria-hidden="true" size="24" weight="duotone" color="currentColor"></phshuffle><span class="clamp text visuallyHidden">Switch shuffle off</span>
      </button><button class="centerItems buttonLink disabled" disabled="" type="button" title="Previous track">
        <phskipback class="icon" aria-hidden="true" size="24" weight="duotone"></phskipback><span class="clamp text visuallyHidden"> Previous track </span>
      </button>
      <!--v-if--><span class="centerItems spinningLoader spinningLoader playPauseButton"><ph-circle-notch-stub size="20" class="icon"></ph-circle-notch-stub><span class="visuallyHidden">Loading...</span></span>
      <!--v-if--><button class="centerItems buttonLink disabled" disabled="" type="button" title="Next track">
        <phskipforward class="icon" aria-hidden="true" size="24" weight="duotone"></phskipforward><span class="clamp text visuallyHidden"> Next track </span>
      </button><button class="centerItems buttonLink" type="button" title="Turn on repeat all">
        <phrepeat class="icon" aria-hidden="true" size="24" weight="duotone" color="currentColor"></phrepeat><span class="clamp text visuallyHidden">Turn on repeat all</span>
      </button>
    </div>
    <div class="centerItems playerOptions hideMobile playerOptions">
      <p class="smallFont time">00:00 / 00:10</p>
      <div class="centerItems volumeControl"><button class="centerItems buttonLink" type="button" title="Mute">
          <phspeakerhigh class="icon" aria-hidden="true" size="24" weight="duotone"></phspeakerhigh><span class="clamp text visuallyHidden">Mute</span>
        </button>
        <div class="centerItems smallFont volumeInputWrapper">
          <div class="inputRange" aria-label="Volume" aria-valuetext="1 of 1">
            <div class="centerItems slider">
              <div class="progressWrapper">
                <div class="process" style="width: 0px;"></div>
                <!--v-if-->
              </div>
              <!--v-if-->
              <!--v-if-->
            </div>
          </div>
          <p aria-hidden="" class="currentVolume">100</p>
          <p class="visuallyHidden"> Volume at 100% </p>
        </div>
      </div>
      <!--v-if--><button class="centerItems buttonLink" type="button" title="Media information">
        <phinfo class="icon" aria-hidden="true" size="24" weight="duotone"></phinfo><span class="clamp text visuallyHidden"> Media information </span>
      </button><button class="centerItems buttonLink" type="button" title="Like track">
        <phheart class="icon" aria-hidden="true" size="24" weight="duotone"></phheart><span class="clamp text visuallyHidden">Like track</span>
      </button>
    </div>
  </div>
</div>"
`;
